# tm4c-cmake-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  openocd.cfg  tm4c123gh6pm.ld
cmake/: arm-none-eabi-gcc.cmake  flash-target.cmake  vscode-debug.cmake  vscode-debug.in
inc/: PLL.h  SysTick.h
src/: PLL.c  SysTick.c  UART.c  main.c  startup.c
